[package]
# Project information
name = "rust-webservice"
version = "0.1.0"
authors = ["Christoph 'Youka' Spanknebel"]
description = "A simple webservice in rust. Covers security by cookie identity, communicates by REST in JSON format and uses an embedded SQLite database to store data."
# Language features
edition = "2018"
# Documentation
readme = "README.md"
license = "MIT"

[dependencies]
# Http server
actix-web = "~2"    # https://crates.io/crates/actix-web
actix-rt = "~1.1"   # https://crates.io/crates/actix-rt
# Serialization
serde = {version = "~1.0", features = ["derive"]}   # https://crates.io/crates/serde
# Security
actix-identity = "~0.2"   # https://crates.io/crates/actix-identity
# Database
rusqlite = {version = "~0.22", features = ["bundled"]}  # https://crates.io/crates/rusqlite
# Logging
env_logger = "~0.7" # https://crates.io/crates/env_logger

[profile.release]
# Shrink binary with strong optimization
lto = true
codegen-units = 1
panic = "abort"